# hacknation-ai-hackathon

./: .gitignore  LICENSE  PLAN.md  README.md  SYSTEM_CONTEXT.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  mock_data.py  models.py
backend/app/routers/: auth.py  facilities.py  map.py  query.py  voice.py
backend/app/services/: supabase.py  voice.py
backend/supabase/: schema.sql
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/browse/: page.tsx
frontend/app/map/: page.tsx
frontend/components/: AgentResponse.tsx  AgentTrace.tsx  AppShell.tsx  AuthCard.tsx  DesertAlert.tsx  DesertMap.tsx  FacilityCard.tsx  OperationsPanel.tsx  QuerySnapshot.tsx  SearchBar.tsx  SiteHeader.tsx  TrustBadge.tsx  VoiceButton.tsx
frontend/hooks/: useRealtimeTranscription.ts
frontend/lib/: api.ts  auth-api.ts  env.ts  mock-data.ts
frontend/lib/supabase/: client.ts
src/config/: settings.py
src/graph/: builder.py  embedder.py  enricher.py  preprocessor.py  query_builder.py
src/utils/: data.py
